--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-dev-utils": "^10.2.1",
     "react-docgen": "^2.21.0",
     "react-dom": "^16.13.1",
+    "react-highlight": "^0.12.0",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.2",
@@ -144,5 +145,8 @@
     "presets": [
       "react-app"
     ]
+  },
+  "devDependencies": {
+    "@types/highlight.js": "^9.12.3"
   }
 }
