--- a/package.json
+++ b/package.json
@@ -148,6 +148,10 @@
     ]
   },
   "devDependencies": {
-    "@types/highlight.js": "^9.12.3"
+    "@types/highlight.js": "^9.12.3",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "react-addons-test-utils": "^15.6.2",
+    "react-test-renderer": "^16.13.1"
   }
 }
